cleaned up file to string test methods