@@ -7,7 +7,8 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.io.IOException;
-import java.util.Objects;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
@@ -53,7 +54,8 @@ public class CountiesRunnerTest {
         Assert.assertNull(county);
     }
 
-    public String loadResourceTestFileAsString(String filename) throws IOException {
-        return new String(Objects.requireNonNull(getClass().getClassLoader().getResourceAsStream(filename)).readAllBytes());
+    private String loadResourceTestFileAsString(String filename) throws IOException {
+//        return new String(Objects.requireNonNull(getClass().getClassLoader().getResourceAsStream(filename)).readAllBytes());
+        return new String(Files.readAllBytes(Paths.get(getClass().getClassLoader().getResource(filename).getPath())));
     }
 }
